[tool.poetry]
name = "replace-with-gkg"
version = "0.1.0"
description = "Replace any input with a better result from the Google Knowledge Graph"
authors = ["Frank Blechschmidt <contact@frank-blechschmidt.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
